--- a/SpartaProjects/final_project/final.ipynb
+++ b/SpartaProjects/final_project/final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -40,6 +40,32 @@
    ],
    "source": [
     "show(\"Talent/10383.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    [Distracted, Impulsive, Introverted]\n",
+       "Name: weaknesses, dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('10383.json') as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "norm_data = pd.json_normalize(data)\n",
+    "\n",
+    "norm_data[\"weaknesses\"]"
    ]
   }
  ],
